app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
:root {
  --display-small: 2.25rem; /* 36px */
  --body-large: 1rem; /* 16px */
  --space-xs: 0.75em; /* 12px */
  --space-s: 1.5em; /* 24px */
  --space-m: 3em; /* 48px */
  --space-l: 4.5em; /* 72px */
}

* {
  font-family: "Poppins", serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-decoration: none;
  color: white;
}

body {
  position: relative;
  background-color: black;
  padding: var(--space-s) var(--space-s) var(--space-l);
  min-height: 100vh;
}

h1 {
  font-size: var(--display-small);
}

p, a, button, label, input, span, div {
  font-size: var(--body-large);
}

.footer {
  position: absolute;
  right: var(--space-xs);
  bottom: var(--space-xs);
}

.footer > a {
  text-decoration: underline;
}

@media only screen and (min-width: 768px) {
  body {
    padding: 4.6875em var(--space-m);
  }
}

